--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ distlib
 dj-database-url
 Django
 django-allauth
+django-cors-headers
 django-crispy-forms
 django-email
 django-environ
@@ -81,6 +82,7 @@ PyScreeze
 python-bidi
 python-dateutil
 pytweening
+
 PyYAML
 pyzmq
 qrcode
@@ -93,7 +95,6 @@ svglib
 tinycss2
 tornado
 traitlets
-typing_extensions
 tzdata
 tzlocal
 uritools
